@@ -16,6 +16,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
 
+import com.vue3type_travel.web.dao.CartDao;
 import com.vue3type_travel.web.entity.Cart;
 import com.vue3type_travel.web.entity.Place;
 import com.vue3type_travel.web.repository.CartRepository;
@@ -34,28 +35,40 @@ public class CartController {
 	@Autowired
 	PlaceRepository placeRepository;
 	
+	@Autowired
+	CartDao carDaoMapper;
+	
 	// cart 정보를 가져오기
 	@GetMapping("/api/cart/places")
-	public ResponseEntity<List<Place>> getCartItems(@CookieValue(value="token", required = false) String token) {
-		
+//	public ResponseEntity<List<Place>> getCartItems(@CookieValue(value="token", required = false) String token) {
+	public ResponseEntity<List<Cart>> getCartItems(@CookieValue(value="token", required = false) String token) {
 		if(!jwtService.isValid(token)) {
 			throw new ResponseStatusException(HttpStatus.UNAUTHORIZED);
 		}
 		
 		int memberId = jwtService.getId(token);
-		List<Cart> carts = cartRepository.findByMemberId(memberId);
+//		List<Cart> carts = cartRepository.findByMemberId(memberId);
 		
-		// youtube보고 따라한 아래 명령어를 먹히지 않았음 => 그래서 collect()함수를 찾아 대체했음.
-		// List<Integer> itemIds = carts.stream().map(Cart::getItemId).toList();
-		// 아래 카트의 정보를 가져오면 vo 한 개에 대한 정보만 가져올테니, list로 가져와서 다건을 처리할 수 있도록 해준다.
-		List<Integer> placeIds = carts.stream().map(Cart::getPlaceId).collect(Collectors.toList());
-		System.out.println("여기 placeIds : " + placeIds);
+//		// youtube보고 따라한 아래 명령어를 먹히지 않았음 => 그래서 collect()함수를 찾아 대체했음.
+//		// List<Integer> itemIds = carts.stream().map(Cart::getItemId).toList();
+//		// 아래 카트의 정보를 가져오면 vo 한 개에 대한 정보만 가져올테니, list로 가져와서 다건을 처리할 수 있도록 해준다.
+//		List<Integer> placeIds = carts.stream().map(Cart::getPlaceId).collect(Collectors.toList());
+//		System.out.println("여기 placeIds : " + placeIds);
+//		
+//		// 다건으로 처리된 list형식을 items 참조변수에 담는다.
+//		List<Place> places = placeRepository.findByIdIn(placeIds);		
+//		
+//		return new ResponseEntity<>(places, HttpStatus.OK);
 		
-		// 다건으로 처리된 list형식을 items 참조변수에 담는다.
-		List<Place> places = placeRepository.findByIdIn(placeIds);
-		System.out.println("여기 places : " + places);
+		// 22.11.10일 이제 내가 mapper쪽으로 sql바꿔서 Cart페이지를 보이게 성공
+		List<Cart> cartList = carDaoMapper.getCartList(memberId);
+		System.out.println("여기 cartList : " + cartList);
 		
-		return new ResponseEntity<>(places, HttpStatus.OK);
+		for(Cart car: cartList) {
+			int s1 = car.getTotal_price();
+			System.out.println("여기 s1 : " + s1);
+		}
+		return new ResponseEntity<>(cartList, HttpStatus.OK);
 	}
 	
 	// cart의 정보를 넣기(push)
@@ -77,7 +90,10 @@ public class CartController {
 			Cart newCart = new Cart();
 			newCart.setMemberId(memberId);
 			newCart.setPlaceId(placeId);
-			newCart.setTotalPrice(Integer.parseInt(param.get("totalPrice")));
+			newCart.setTotal_price(Integer.parseInt(param.get("totalPrice")));
+			newCart.setAdult_num(Integer.parseInt(param.get("adultNum")));
+			newCart.setKid_num(Integer.parseInt(param.get("kidNum")));
+			newCart.setBaby_num(Integer.parseInt(param.get("babyNum")));
 			cartRepository.save(newCart);
 		}
 		
